--- a/app/html/test.html
+++ b/app/html/test.html
@@ -61,4 +61,8 @@
   </script>
   
   
-  script of template for 
+<!--  script of template for login  -->
+<script type="text/template" id="login-area">
+  <div class="wel-text">Hey! <a class="username"><%= userName %></a> | <a class="log-info"><%= logState%></a>
+  </div>
+</script>
