--- a/background.html
+++ b/background.html
@@ -2,14 +2,22 @@
 <html>
 	<head>
 		<title>IVLE :: Background</title>
+		<!-- vender -->
 		<script src="/app/lib/jquery.min.js"></script>
 		<script src="/bootstrap/js/bootstrap.js"></script>
-		<script src="/app/js/background.js"></script>
 		<script src="/app/lib/json2.js"></script>
 		<script src="/app/lib/underscore-1.3.3.js"></script>
 		<script src="/app/lib/backbone.js"></script>
 		<script src="/app/lib/backbone-localstorage.js"></script>
+		<!-- app -->
 		<script src="/app/js/boostrap.js"></script>
+		<script src="/app/js/LAPI.js"></script>
+		<script src="/app/js/user.js"></script>
+		<script src="/app/js/login.js"></script>
+		<script src="/app/js/background.js"></script>
+		<script src="/app/js/modules.js"></script>
+
+		
 	</head>
 	<body></body>
 </html>
