--- a/app/html/popup.html
+++ b/app/html/popup.html
@@ -97,7 +97,7 @@
 			<div class="carousel-inner">
 			  
 <!-- first slide, module grids-->
-			  <div id="modules-info">
+<!--			  <div id="modules-info">
 				<div class=" active item">
 				  <ul id="modules-list" class="thumbnails">
 					<li class="item1-grid">
@@ -105,26 +105,12 @@
 					</li>
 				  </ul>
 				</div>
-			  </div>
+			  </div>-->
 <!-- second slide -->
 
 			  <div class="item">
 				<div id="modules">
-				  <div class="modules-area">
-<!--				  <ul class="thumbnails">
-					<li class="item2-grid">
-					  <div><p>Module1</p></div>
-					</li>
-					<li class="item2-grid">
-					  <div><p>Module2</p></div>
-					</li>
-					<li class="item2-grid">
-					  <div><p>Module3</p></div>
-					</li>
-				  </ul>-->
-				  </div>
-				  <div class="info-area">
-				  </div>
+				  
 				</div>
 			  </div>
 
@@ -186,7 +172,7 @@
   
 <!--         modules info        -->
   <script type="text/template" id="module-template">
-	<div><p>Module1</p></div>
+	<div><p><%= moduleCode %></p><p><%= title %></p></div>
   </script>
   
   <script type="text/template" id="modulesapp-template">
