--- a/background.html
+++ b/background.html
@@ -16,6 +16,7 @@
 		<script src="/app/js/login.js"></script>
 		<script src="/app/js/background.js"></script>
 		<script src="/app/js/modules.js"></script>
+		<script src="/app/js/timetable.js"></script>
 
 		
 	</head>
