--- a/app/html/popup.html
+++ b/app/html/popup.html
@@ -180,7 +180,7 @@
   <!--       timetable           -->
   <script type="text/template" id="slot-template">
   	<div>
-  		<p><%= slot.moduleCode %></p>
+  		<p><%= moduleCode %></p>
   	</div>
   </script>
   
