--- a/app/html/popup.html
+++ b/app/html/popup.html
@@ -179,6 +179,7 @@
   
   <!--       timetable           -->
   <script type="text/template" id="slot-template">
+	<p>shit<p>
   	<div>
   		<p><%= moduleCode %></p>
   	</div>
